gcc_err.log
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
test.c: In function 'enlarge_test':
test.c:438:47: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             if(map->buckets[i]==NULL) sprintf(msg,"%.100s(null)  ",msg);
                                               ^~~                  ~~~
test.c:439:26: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
             else sprintf(msg,"%.100s%s  ", msg, (char*)map->buckets[i]->value);
                          ^~~               ~~~
test.c:442:17: error: passing argument 1 to restrict-qualified parameter aliases with argument 3 [-Werror=restrict]
         sprintf(msg,"%.100s\nbut should be: \nvalue3  (null)  (null)  (null)  value4  (null)  value2  value1  value0  (null)  (null)  (null)  value5  (null)  (null)  (null)  (null)  (null)  (null)  (null)",msg);
                 ^~~                                                                                                                                                                                           ~~~
cc1.exe: all warnings being treated as errors
